updated projects section: modern card design,responsive grid design,hover effects

--- a/index.html
+++ b/index.html
@@ -80,27 +80,36 @@
   <div class="project-container">
 
     <div class="project-card">
-      <img src="images/project1.png" alt="Portfolio Website">
-      <h3>Personal Portfolio</h3>
-      <p>A responsive personal portfolio website built using HTML and CSS.</p>
-      <p class="tech">HTML • CSS</p>
-      <a href="#" class="project-btn">View Project</a>
+      <h3>Portfolio Website</h3>
+      <p>
+        My personal portfolio website built with HTML, CSS and JavaScript, showcasing my 
+        skills, projects, and contact information.
+      </p>
+      <p class="tech">HTML • CSS • JavaScript</p>
+      <a href="https://kebebushmerga.github.io/portfolio-website/" target="_blank">Live Demo</a>
+      <a href="https://github.com/kebebushmerga/portfolio-website" target="_blank">GitHub</a>
     </div>
 
     <div class="project-card">
-      <img src="images/project2.png" alt="Landing Page">
-      <h3>Landing Page</h3>
-      <p>A modern landing page design focused on layout and responsiveness.</p>
-      <p class="tech">HTML • CSS</p>
-      <a href="#" class="project-btn">View Project</a>
+      <h3>To-Do App</h3>
+      <p>
+        An interactive task manager where users can add, delete, and manage tasks.
+        Features include dark/light mode and local storage persistence.
+      </p>
+      <p class="tech">HTML • CSS • JavaScript</p>
+      <a href="https://kebebushmerga.github.io/Todo-app/" target="_blank">Live Demo</a>
+      <a href="https://github.com/kebebushmerga/Todo-app" target="_blank">GitHub</a>
     </div>
 
     <div class="project-card">
-      <img src="images/project3.png" alt="Form Design">
-      <h3>Contact Form</h3>
-      <p>A styled contact form with clean UI and user-friendly layout.</p>
-      <p class="tech">HTML • CSS</p>
-      <a href="#" class="project-btn">View Project</a>
+      <h3>Weather App</h3>
+      <p>
+        A weather application that fetches real-time weather data from
+        the OpenWeatherMap API and displays information by city name.
+      </p>
+      <p class="tech">HTML • CSS • JavaScript • API</p>
+      <a href="https://kebebushmerga.github.io/Weather-App/" target="_blank">Live Demo</a>
+      <a href="https://github.com/kebebushmerga/Weather-App" target="_blank">GitHub</a>
     </div>
 
   </div>
